# rlfish

./: .gitignore  demo.py  environment.yml  pyproject.toml  readme.md  requirements.txt  requirements_mps.txt  rl-note.md
chapter_1/: bandit.py  nonStatBandit.py
chapter_10/: DDPG.py
chapter_10/PPO/: Clip_方案对比.md  PPO_CartPole-from-scratch.py  (+1 more)
chapter_2/: apple.py
chapter_4/: dp_bellman.py  dp_policy_eval.py  dp_policy_iter_byEpoch.py  dp_policy_iter_byStep.py  dp_stateValue_iter.py  dp_策略更新.vsdx
chapter_5/: importance_sampling.py  mc_actionValue_iter_greedy.py  mc_actionValue_iter_ε-greedy.py  mc_actionValue_iter_ε-greedy_fix_α.py  mc_stateValue_iter.py  rolling_dices.py
chapter_6/: Expectation-based_Qlearning.py  Sample-based_Qlearning.py  td_actionValue_iter(sarsa_off_policy).py  td_actionValue_iter(sarsa_on_policy).py  td_stateValue_iter.py
chapter_7/: Q-Learning.py  gradient_descent.py
chapter_8/: DQN_Breakout-v5.py  DoubleDQN_Breakout-v5.py  QLearning_CartPole-v1.py
chapter_9/: actor-critic_CartPole-v1.py  policy_gradient_CartPole-v1.py  reinforce_CartPole-v1.py
expand/: MCTS.md  MCTS_3T.py  MCTS_Gomoku.py  MCTS_Gomoku_NeuralNet.py  MCTS_Gomoku_NeuralNet_CLI_self_play.py  MCTS_Gomoku_NeuralNet_CLI_self_play_test.py  MCTS_Gomoku_NeuralNet_GUI.py  MCTS_Gomoku_NeuralNet_train.py  MCTS_Gomoku_NeuralNet_v3.py  MCTS_Gomoku_RL.py  MCTS_Gomoku_self_play_CLI_v2.py  MCTS_Gomoku_self_play_v1.py  data_process.py  pipeline.py
figures/: A2C.iodraw  A3C.iodraw  DDPG.iodraw  actor-critic神经网络计算流程.iodraw  base.vsdx  dp.vsdx  mc.vsdx  td.vsdx  状态价值.iodraw
(+8 files in other folders)
