[project]
name = "rlfish"
version = "0.1.0"
description = "Research project on Gomoku RL"
requires-python = "==3.9.*" 

dependencies = [
    "numpy>=1.21.2,<1.24.0",
    "scipy==1.8.0",
    "matplotlib==3.5.0",
    "pygame==2.1.0",
    "gym[classic-control]==0.23.0",
    "tqdm==4.67.2",
    "gymnasium[atari,accept-rom-license]==0.29.1",
    "opencv-python==4.9.0.80",
    "ale-py==0.8.1",
    "pyparsing>=3.0.0",
    "torch==1.8.1+cu111",
    "torchvision==0.9.1+cu111",
    "torchaudio==0.8.1",
]

[[tool.uv.index]]
name = "pytorch-cu111"
url = "https://download.pytorch.org/whl/cu111"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu111" }
torchvision = { index = "pytorch-cu111" }
torchaudio = { index = "pytorch-cu111" }